# $Id$

2007-08-10
	* Clarifying licensing

2007-08-08
	* RSS support
	* Wireless support for Linux

2007-08-05
	* Conky 1.4.6 released
	* Updated to libmpdclient 0.13.0
	* Added 'post_21_kernel' config param to specify kernels 2.6.22 and newer
	so i2c works properly

2007-08-04
	* Fixed potential issue on FreeBSD when nprocs < 10 (thanks zotrix)
	* Added support for multiple batteries when using acpi (thanks Phil)
	* a bunch of code cleanups (thanks Psychon)
	* added max length paramater to mpd_title (thinks fow)
	* a number of small bug fixes

2007-07-15
	* Fix PID display, patch #1753934.  thanks sohalt.
	* Fix displaying 4 GB traffic after reloading network driver,
			patch #1754260.  thanks sohalt.

2007-06-21
	* Right-justify top/top_mem vars (pid/cpu/mem} so they align on the decimal.

2007-04-25
	* Added color[0-9] variable patch (thanks jieryn)

2007-04-05
	* Added if_empty patch (thanks Erik)
	* Added if_existing patch for string matching (thanks cromka)
	* Added hwmon support (thanks flitsch)
	* Some xmms2 updates (thanks sleipner)
	* Added $battery_percent and $battery_bar (thanks akash)

2007-02-25
	* OpenBSD support added to Conky (thanks hifi)
	* Updated mboxscan stuff (thanks calmar)

2007-02-25
	* Created branch/1.5 copy of trunk/conky1.  Removing all experimental
	  network code from trunk/conky1.

2007-02-14
	* Include missing mboxscan.h in conky.h.
	* Fixed signedness warnings in conky.c.

2007-02-11
	* Added buffer_text_size option to change the size of the buffer for
	things like $exec, $tail, et cetera
	* Added $mboxscan which lets you display the Subject and From fields
	from recent email in an mbox file
	* Disambiguated (is that a word?) $cpu docs

2007-01-14
	* Fallback to gettimeofday() when clock_gettime () not available (mac os).

2007-01-09
	* API change (timing in milliseconds) for dexter_timedsampler_new ().

2007-01-07
	* Add config.rpath (created by gettextize -copy) to distribution
	  to satisfy AM_ICONV.