@@ -1,5 +1,12 @@
 # $Id$
 
+2007-08-12
+	* Added var $platform which is similar to $i2c and accommodates the conversion
+	  of many devices from /sys/bus/i2c/devices to /sys/bus/platform/devices.
+  * Removed config item post_21_kernel since it forced all i2c device lookups
+	  to go to /sys/bus/platform/devices and some people may need a mix of both
+		i2c and platform devices.
+
 2007-08-10
 	* Clarifying licensing
 
